// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/sbt/extract extractPackageFile() extract deps from native scala file with private variables 1`] = `
{
  "deps": [
    {
      "currentValue": "2.13.0-RC5",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
      "separateMinorPatch": true,
    },
    {
      "currentValue": "0.7.1",
      "datasource": "sbt-package",
      "depName": "com.example:foo",
      "packageName": "com.example:foo_2.13.0-RC5",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
    {
      "currentValue": "1.2.3",
      "datasource": "sbt-package",
      "depName": "com.abc:abc",
      "groupName": "abcVersion",
      "packageName": "com.abc:abc",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
  ],
  "packageFileVersion": undefined,
}
`;

exports[`modules/manager/sbt/extract extractPackageFile() extract deps from native scala file with variables 1`] = `
{
  "deps": [
    {
      "currentValue": "2.13.0-RC5",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
      "separateMinorPatch": true,
    },
    {
      "currentValue": "0.7.1",
      "datasource": "sbt-package",
      "depName": "com.example:foo",
      "packageName": "com.example:foo_2.13.0-RC5",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
    {
      "currentValue": "1.2.3",
      "datasource": "sbt-package",
      "depName": "com.abc:abc",
      "groupName": "abcVersion",
      "packageName": "com.abc:abc",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
    {
      "currentValue": "1.2.3",
      "datasource": "sbt-package",
      "depName": "com.abc:abc-a",
      "groupName": "abcVersion",
      "packageName": "com.abc:abc-a",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
    {
      "currentValue": "1.2.3",
      "datasource": "sbt-package",
      "depName": "com.abc:abc-b",
      "groupName": "abcVersion",
      "packageName": "com.abc:abc-b",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
    {
      "currentValue": "1.2.3",
      "datasource": "sbt-package",
      "depName": "com.abc:abc-c",
      "groupName": "abcVersion",
      "packageName": "com.abc:abc-c",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
  ],
  "packageFileVersion": undefined,
}
`;

exports[`modules/manager/sbt/extract extractPackageFile() extracts deps for generic use-cases 1`] = `
{
  "deps": [
    {
      "currentValue": "2.9.10",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
      "separateMinorPatch": true,
    },
    {
      "currentValue": "0.0.1",
      "datasource": "sbt-package",
      "depName": "org.example:foo",
      "packageName": "org.example:foo",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.2",
      "datasource": "sbt-package",
      "depName": "org.example:bar",
      "packageName": "org.example:bar_2.9.10",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.3",
      "datasource": "sbt-package",
      "depName": "org.example:baz",
      "packageName": "org.example:baz_2.9.10",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.4",
      "datasource": "sbt-package",
      "depName": "org.example:qux",
      "packageName": "org.example:qux",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "2.13.3",
      "datasource": "sbt-package",
      "depName": "org.scala-lang:scala-library",
      "depType": "sources",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.5",
      "datasource": "sbt-package",
      "depName": "org.example:quux",
      "packageName": "org.example:quux",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.6",
      "datasource": "sbt-package",
      "depName": "org.example:quuz",
      "depType": "test",
      "packageName": "org.example:quuz_2.9.10",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.7",
      "datasource": "sbt-package",
      "depName": "org.example:corge",
      "depType": "Provided",
      "packageName": "org.example:corge",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.8",
      "datasource": "sbt-package",
      "depName": "org.example:grault",
      "depType": "Test",
      "groupName": "versionExample",
      "packageName": "org.example:grault",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.9",
      "datasource": "sbt-plugin",
      "depName": "org.example:waldo",
      "depType": "plugin",
      "packageName": "org.example:waldo",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
        "https://dl.bintray.com/sbt/sbt-plugin-releases",
      ],
    },
    {
      "currentValue": "(,8.4.0]",
      "datasource": "sbt-package",
      "depName": "org.example:fred",
      "packageName": "org.example:fred",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
  ],
  "packageFileVersion": "1.0",
}
`;

exports[`modules/manager/sbt/extract extractPackageFile() extracts deps when scala version is defined in a variable 1`] = `
{
  "deps": [
    {
      "currentValue": "2.12.10",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
      "separateMinorPatch": true,
    },
    {
      "currentValue": "0.0.1",
      "datasource": "sbt-package",
      "depName": "org.example:foo",
      "packageName": "org.example:foo",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.2",
      "datasource": "sbt-package",
      "depName": "org.example:bar",
      "packageName": "org.example:bar_2.12",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.3",
      "datasource": "sbt-package",
      "depName": "org.example:baz",
      "packageName": "org.example:baz_2.12",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.4",
      "datasource": "sbt-package",
      "depName": "org.example:qux",
      "packageName": "org.example:qux",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.5",
      "datasource": "sbt-package",
      "depName": "org.example:quux",
      "packageName": "org.example:quux",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.6",
      "datasource": "sbt-package",
      "depName": "org.example:quuz",
      "depType": "test",
      "packageName": "org.example:quuz_2.12",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.7",
      "datasource": "sbt-package",
      "depName": "org.example:corge",
      "depType": "Provided",
      "packageName": "org.example:corge",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.8",
      "datasource": "sbt-package",
      "depName": "org.example:grault",
      "depType": "Test",
      "groupName": "versionExample",
      "packageName": "org.example:grault",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
      ],
    },
    {
      "currentValue": "0.0.9",
      "datasource": "sbt-plugin",
      "depName": "org.example:waldo",
      "depType": "plugin",
      "packageName": "org.example:waldo",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
        "https://example.com/repos/1/",
        "https://example.com/repos/2/",
        "https://example.com/repos/3/",
        "https://example.com/repos/4/",
        "https://example.com/repos/5/",
        "https://dl.bintray.com/sbt/sbt-plugin-releases",
      ],
    },
  ],
  "packageFileVersion": "3.2.1",
}
`;

exports[`modules/manager/sbt/extract extractPackageFile() extracts deps when scala version is defined in a variable with ThisBuild scope 1`] = `
{
  "deps": [
    {
      "currentValue": "2.12.10",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
      "separateMinorPatch": true,
    },
    {
      "currentValue": "0.0.2",
      "datasource": "sbt-package",
      "depName": "org.example:bar",
      "packageName": "org.example:bar_2.12",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
  ],
  "packageFileVersion": undefined,
}
`;

exports[`modules/manager/sbt/extract extractPackageFile() extracts deps when scala version is defined in a variable with a trailing comma 1`] = `
{
  "deps": [
    {
      "currentValue": "2.12.10",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
      "separateMinorPatch": true,
    },
    {
      "currentValue": "0.0.2",
      "datasource": "sbt-package",
      "depName": "org.example:bar",
      "packageName": "org.example:bar_2.12",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
  ],
  "packageFileVersion": undefined,
}
`;

exports[`modules/manager/sbt/extract extractPackageFile() extracts deps when scala version is defined with ThisBuild scope 1`] = `
{
  "deps": [
    {
      "currentValue": "2.12.10",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
      "separateMinorPatch": true,
    },
    {
      "currentValue": "0.0.2",
      "datasource": "sbt-package",
      "depName": "org.example:bar",
      "packageName": "org.example:bar_2.12",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
  ],
  "packageFileVersion": undefined,
}
`;

exports[`modules/manager/sbt/extract extractPackageFile() extracts deps when scala version is defined with a trailing comma 1`] = `
{
  "deps": [
    {
      "currentValue": "2.12.10",
      "datasource": "maven",
      "depName": "scala",
      "packageName": "org.scala-lang:scala-library",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
      "separateMinorPatch": true,
    },
    {
      "currentValue": "0.0.2",
      "datasource": "sbt-package",
      "depName": "org.example:bar",
      "packageName": "org.example:bar_2.12",
      "registryUrls": [
        "https://repo.maven.apache.org/maven2",
      ],
    },
  ],
  "packageFileVersion": undefined,
}
`;
